--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
+appdirs==1.4.4
 asttokens==2.0.5
+attrs==21.4.0
+autopep8==1.6.0
 backcall==0.2.0
+cattrs==22.1.0
 certifi==2022.6.15
 charset-normalizer==2.0.12
 cycler==0.11.0
 debugpy==1.6.0
 decorator==5.1.1
 entrypoints==0.4
+exceptiongroup==1.0.0rc8
 executing==0.8.3
 fonttools==4.33.3
 idna==3.3
@@ -32,15 +37,19 @@ psutil==5.9.1
 psycopg2-binary==2.9.3
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pycodestyle==2.8.0
 Pygments==2.12.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.1
 pyzmq==23.1.0
 requests==2.28.0
+requests-cache==0.9.5
 six==1.16.0
 stack-data==0.2.0
+toml==0.10.2
 tornado==6.1
 traitlets==5.2.2.post1
+url-normalize==1.4.3
 urllib3==1.26.9
 wcwidth==0.2.5
