--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ exceptiongroup==1.0.0rc8
 executing==0.8.3
 fastjsonschema==2.15.3
 fonttools==4.33.3
+greenlet==1.1.2
 idna==3.3
 importlib-resources==5.8.0
 ipykernel==6.13.1
@@ -76,6 +77,7 @@ requests-cache==0.9.5
 Send2Trash==1.8.0
 six==1.16.0
 soupsieve==2.3.2.post1
+SQLAlchemy==1.4.39
 stack-data==0.2.0
 terminado==0.15.0
 tinycss2==1.1.1
