--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ cattrs==22.1.0
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.0.12
+commonmark==0.9.1
 cycler==0.11.0
 debugpy==1.6.0
 decorator==5.1.1
@@ -75,6 +76,7 @@ qtconsole==5.3.1
 QtPy==2.1.0
 requests==2.28.0
 requests-cache==0.9.5
+rich==12.5.1
 Send2Trash==1.8.0
 six==1.16.0
 soupsieve==2.3.2.post1
@@ -84,7 +86,9 @@ terminado==0.15.0
 tinycss2==1.1.1
 toml==0.10.2
 tornado==6.1
+tqdm==4.64.0
 traitlets==5.2.2.post1
+typing-extensions==4.3.0
 url-normalize==1.4.3
 urllib3==1.26.9
 wcwidth==0.2.5
