--- a/requirements.txt
+++ b/requirements.txt
@@ -89,6 +89,7 @@ tornado==6.1
 tqdm==4.64.0
 traitlets==5.2.2.post1
 typing-extensions==4.3.0
+Unidecode==1.3.4
 url-normalize==1.4.3
 urllib3==1.26.9
 wcwidth==0.2.5
