--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ cycler==0.11.0
 debugpy==1.6.0
 decorator==5.1.1
 defusedxml==0.7.1
+duckdb==0.4.0
 entrypoints==0.4
 exceptiongroup==1.0.0rc8
 executing==0.8.3
