--- a/config.py.sample
+++ b/config.py.sample
@@ -37,7 +37,7 @@ if __name__ == '__main__':
     from os import makedirs
     makedirs(MB_ROOT, exist_ok=True)
     makedirs(SAMPLE_ROOT, exist_ok=True)
-    makedirs(LOG_ROOT, exist_ok=True)
+    makedirs(LOG_WRITE_PATH, exist_ok=True)
     makedirs(HTML_ROOT, exist_ok=True)
     if WRITE_ROOT != "":
         makedirs(WRITE_ROOT, exist_ok=True)
