--- a/requirements.txt
+++ b/requirements.txt
@@ -11,18 +11,24 @@ cattrs==22.1.0
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.0.12
+click==8.1.3
+cloudpickle==2.2.0
 commonmark==0.9.1
 cycler==0.11.0
+dask==2022.1.1
 debugpy==1.6.0
 decorator==5.1.1
 defusedxml==0.7.1
+distributed==2022.1.1
 duckdb==0.4.0
 entrypoints==0.4
 exceptiongroup==1.0.0rc8
 executing==0.8.3
 fastjsonschema==2.15.3
 fonttools==4.33.3
+fsspec==2022.8.2
 greenlet==1.1.2
+HeapDict==1.0.1
 idna==3.3
 importlib-resources==5.8.0
 ipykernel==6.13.1
@@ -40,10 +46,13 @@ jupyterlab-pygments==0.2.2
 jupyterlab-widgets==1.1.1
 kiwisolver==1.4.3
 llvmlite==0.38.1
+locket==1.0.0
 MarkupSafe==2.1.1
 matplotlib==3.5.2
 matplotlib-inline==0.1.3
 mistune==0.8.4
+modin==0.15.3
+msgpack==1.0.4
 nbclient==0.6.6
 nbconvert==6.5.0
 nbformat==5.4.0
@@ -52,9 +61,10 @@ notebook==6.4.12
 numba==0.55.2
 numpy==1.22.4
 packaging==21.3
-pandas==1.4.2
+pandas==1.4.4
 pandocfilters==1.5.0
 parso==0.8.3
+partd==1.3.0
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.1.1
@@ -72,6 +82,7 @@ pyparsing==3.0.9
 pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytz==2022.1
+PyYAML==6.0
 pyzmq==23.1.0
 qtconsole==5.3.1
 QtPy==2.1.0
@@ -80,12 +91,15 @@ requests-cache==0.9.5
 rich==12.5.1
 Send2Trash==1.8.0
 six==1.16.0
+sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
 SQLAlchemy==1.4.39
 stack-data==0.2.0
+tblib==1.7.0
 terminado==0.15.0
 tinycss2==1.1.1
 toml==0.10.2
+toolz==0.12.0
 tornado==6.1
 tqdm==4.64.0
 traitlets==5.2.2.post1
@@ -96,5 +110,6 @@ urllib3==1.26.9
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.6.1
+zict==2.2.0
 zipp==3.8.0
 zstandard==0.18.0
