completed clean_master.py. Updated config. initiated test_check_logs.ipynb for reading and analyzing logs

--- a/config.py.sample
+++ b/config.py.sample
@@ -17,9 +17,9 @@ MB_ROOT = "warehouse/MB_tables"
 SAMPLE_ROOT = "warehouse/samples"
 
 # The root directory for writing logs
-LOG_WRITE_PATH = "warehouse/logs"
+LOG_WRITE_ROOT = "warehouse/logs"
 
-# Write logs every n files
+# Write log to disk every n files
 LOG_EPOCH = 10
 
 # The root directory for mapper outputs
