--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 appdirs==1.4.4
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
+astroid==2.12.12
 asttokens==2.0.5
 attrs==21.4.0
 autopep8==1.6.0
 backcall==0.2.0
 beautifulsoup4==4.11.1
+black==22.10.0
 bleach==5.0.1
 cattrs==22.1.0
 certifi==2022.6.15
@@ -19,6 +21,7 @@ dask==2022.1.1
 debugpy==1.6.0
 decorator==5.1.1
 defusedxml==0.7.1
+dill==0.3.5.1
 distributed==2022.1.1
 duckdb==0.4.0
 entrypoints==0.4
@@ -35,6 +38,7 @@ ipykernel==6.13.1
 ipython==8.4.0
 ipython-genutils==0.2.0
 ipywidgets==7.7.1
+isort==5.10.1
 jedi==0.18.1
 Jinja2==3.1.2
 jsonschema==4.6.1
@@ -45,14 +49,17 @@ jupyter-core==4.10.0
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==1.1.1
 kiwisolver==1.4.3
+lazy-object-proxy==1.7.1
 llvmlite==0.38.1
 locket==1.0.0
 MarkupSafe==2.1.1
 matplotlib==3.5.2
 matplotlib-inline==0.1.3
+mccabe==0.7.0
 mistune==0.8.4
 modin==0.15.3
 msgpack==1.0.4
+mypy-extensions==0.4.3
 nbclient==0.6.6
 nbconvert==6.5.0
 nbformat==5.4.0
@@ -65,9 +72,11 @@ pandas==1.4.4
 pandocfilters==1.5.0
 parso==0.8.3
 partd==1.3.0
+pathspec==0.10.1
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.1.1
+platformdirs==2.5.2
 prometheus-client==0.14.1
 prompt-toolkit==3.0.29
 psutil==5.9.1
@@ -78,6 +87,7 @@ pyarrow==8.0.0
 pycodestyle==2.8.0
 pycparser==2.21
 Pygments==2.12.0
+pylint==2.15.4
 pyparsing==3.0.9
 pyrsistent==0.18.1
 python-dateutil==2.8.2
@@ -99,6 +109,8 @@ tblib==1.7.0
 terminado==0.15.0
 tinycss2==1.1.1
 toml==0.10.2
+tomli==2.0.1
+tomlkit==0.11.5
 toolz==0.12.0
 tornado==6.1
 tqdm==4.64.0
@@ -110,6 +122,7 @@ urllib3==1.26.9
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.6.1
+wrapt==1.14.1
 zict==2.2.0
 zipp==3.8.0
 zstandard==0.18.0
